<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:background="@drawable/top_dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/change_info"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_dialog_bg"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_Avatar_ChangeInfo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="#737272"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_image"
            android:gravity="center"
            android:textSize="15sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdt_Name_ChangeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:boxStrokeColor="#D575E4"
            app:hintTextColor="#7A048E"
            android:padding="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Name_ChangeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdt_Status_ChangeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:boxStrokeColor="#D575E4"
            app:hintTextColor="#7A048E"
            android:padding="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Status_ChangeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >
            <Button
                android:id="@+id/btn_ChangeInfo_Cancel"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:background="@drawable/btn_cancel_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textStyle="bold"

                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                />
            <Button
                android:id="@+id/btn_ChangeInfo_Confirm"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:background="@drawable/btn_confirm_dialog"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>