<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:padding="3dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_up"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/coiny"
        android:layout_marginTop="5dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdt_Name_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:boxStrokeColor="#D575E4"
        app:hintTextColor="#7A048E"
        app:endIconMode="clear_text"
        android:padding="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Name_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_sign_up"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdt_Email_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:boxStrokeColor="#D575E4"
        app:hintTextColor="#7A048E"
        app:endIconMode="clear_text"

        android:padding="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Email_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdt_Password_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="#D575E4"
        app:hintTextColor="#7A048E"
        android:padding="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Password_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdt_ConfirmPassword_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="#D575E4"
        app:hintTextColor="#7A048E"
        android:padding="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ConfirmPassword_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/btn_sign_in_bg"
        android:textStyle="bold"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        />
</LinearLayout>