<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="5dp"
    >

        <Button
            android:id="@+id/btn_Change_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_info"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:background="@drawable/btn_setting_account"
            />
        <Button
            android:id="@+id/btn_Change_Password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:background="@drawable/btn_setting_logout"
            />
        <Button
            android:id="@+id/btn_Account_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:background="@drawable/btn_setting_cancel"
            />
</LinearLayout>