<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:background="@drawable/top_dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/change_pass"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_dialog_bg"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdt_Password_New"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#D575E4"
            app:hintTextColor="#7A048E"
            android:padding="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Password_New"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:hint="@string/input_new_pass"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEdt_Password_Confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="true"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#D575E4"
            app:hintTextColor="#7A048E"
            android:padding="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Password_Confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/input_new_pass_confirm"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >
            <Button
                android:id="@+id/btn_ChangePass_Cancel"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:background="@drawable/btn_cancel_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textStyle="bold"

                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                />
            <Button
                android:id="@+id/btn_ChangePass_Confirm"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:background="@drawable/btn_confirm_dialog"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>