<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_power_off"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_logout"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/coiny"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_Cancel_Logout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:textStyle="bold"
                android:background="@drawable/btn_cancel_dialog"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/btn_Confirm_Logout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:backgroundTint="@null"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:background="@drawable/btn_confirm_dialog"
                android:text="@string/confirm"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>