<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.AccountActivity"

    >

    <RelativeLayout
        android:id="@+id/layout_HeaderAccount"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#29B6F6">

        <ImageButton
            android:id="@+id/btn_Back_Account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_toStartOf="@id/btn_Change_Account"
            android:layout_toEndOf="@id/btn_Back_Account"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/btn_Change_Account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:src="@drawable/dots" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_HeaderAccount"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_Avatar_Account"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            app:civ_border_color="#737272"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_NameAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textSize="18sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#9F9A9A" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_EmailAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#9F9A9A" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_StatusAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>